welcome.lessons.welcome.array.search.SecondMaxValue.scala.error
max2Value:3: error: value MAX_VALUE is not a member of Array[Int]
  var max = nums.MAX_VALUE
                 ^max2Value:4: error: not found: value minValue
  var max2 = minValue.MIN_VALUE
             ^